Transform project into send-to-kindle CLI tool
Rename project from apple-mail-cli to send-to-kindle and implement complete email sending functionality for Kindle devices. Add CLI argument parsing, validation, and JXA integration for Mail.app automation.

Changes:
- Rename package to send-to-kindle
- Implement CLI with argument parsing (to, from, file, subject options)
- Add validation for email addresses and file existence
- Create JXA script for sending emails via Mail.app with attachments
- Add error handling with custom error types (CliError, ValidationError, etc.)
- Update documentation in README and CLAUDE.md
- Add npm scripts for start, dev, test, and build

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "apple-mail-cli",
+  "name": "send-to-kindle",
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start": "bun run index.ts",
+    "dev": "bun --watch run index.ts",
+    "test": "bun test",
+    "build": "bun build index.ts --compile --outfile mail-cli"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
