ci: add GitHub Actions workflow for automated npm publishing
- Add .github/workflows/publish.yml for CI/CD
- Automatically bump version based on conventional commits
- Publish to npm on push to main branch
- Add version script to package.json for build integration

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "bun --watch run index.ts",
     "test": "bun test",
     "build": "bun build index.ts --outdir dist --target bun",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build",
+    "version": "bun run build && git add dist"
   },
   "devDependencies": {
     "@types/bun": "latest"
