--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "dev": "bun --watch run index.ts",
     "test": "bun test",
     "build": "bun build index.ts --outdir dist --target bun",
-    "prepublishOnly": "bun run build",
-    "version": "bun run build && git add dist"
+    "prepublishOnly": "bun run build"
   },
   "devDependencies": {
     "@types/bun": "latest"
